base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-name
  labels:
    app: python-api
    component: backend
spec:
  selector:
    app: python-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
    name: http
  type: ClusterIP
  sessionAffinity: None
